--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,5 @@
     <string name="buttonPoint_text">.</string>
     <string name="buttonEqual_text">=</string>
     <string name="buttonPercent_text">%</string>
+    <string name="textview">TextView</string>
 </resources>
