--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="buttonEqual_text">=</string>
     <string name="buttonPercent_text">%</string>
     <string name="textview">TextView</string>
+    <string name="operation_history">Operation History</string>
 </resources>
