--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="buttonPercent_text">%</string>
     <string name="textview">TextView</string>
     <string name="operation_history">Operation History</string>
+    <string name="bookmarks">Bookmarks</string>
 </resources>
