I have completed the design of the UI, and completed the UI logic. Except for adding past operation answers onlick of view.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="button9_text">9</string>
 
     <string name="buttonClear_text">C</string>
-    <string name="buttonDelete_text">Del</string>
+    <string name="buttonDelete_text">del</string>
 
     <string name="buttonAdd_text">+</string>
     <string name="buttonSubtract_text">-</string>
